re PR rtl-optimization/34132 (ICE: internal consistency failure (invalid rtl sharing found in the insn))

PR rtl-optimization/34132
	* gcse.c (try_replace_reg): Avoid rtx sharing between REG_EQUAL note
	and insn.

	* gcc.c-torture/compile/20071118-1.c: New test.

From-SVN: r130275